<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:paddingHorizontal="5dp"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/movie_poster" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="5dp"
            android:text="@string/movie_watched"
            android:textSize="16sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWatched"
            android:layout_width="match_parent"
            android:layout_height="225dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="5dp"
            android:text="@string/movie_watchLater"
            android:textSize="16sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWatchLater"
            android:layout_width="match_parent"
            android:layout_height="225dp" />

    </LinearLayout>
</ScrollView>